syntax = "proto3";

package notifysvc;


import "google/api/annotations.proto";


service NotifyService {
  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
        get: "/health"
    };
  }
  // notify
  rpc OrderNotifyStart(OrderNotifyStartRequest) returns (OrderNotifyStartResponse) {
    option (google.api.http) = {
        get: "/order/notify/start"
    };
  }
  rpc OrderNotifyStop(OrderNotifyStopRequest) returns (OrderNotifyStopResponse) {
    option (google.api.http) = {
        get: "/order/notify/stop"
    };
  }
}

message OrderNotifyStartRequest {
   
}

message OrderNotifyStartResponse {
    int32 code = 1;
    string msg = 2;
}

message OrderNotifyStopRequest {
   
}

message OrderNotifyStopResponse {
    int32 code = 1;
    string msg = 2;
}

message HealthCheckRequest {
   
}

message HealthCheckResponse {
    int32 status = 1;
    string message = 2;
}
